# pocket

./: .gitignore  CLAUDE.md  LICENSE  README.md  VISION.md
bridge/: audio_io.js  device-ws.js  device_loopback.js  env.example  fn_smoketest.js  gw_smoketest.js  oc_smoketest.js  openclaw_client.js  package-lock.json  package.json  smoketest.js  voice.js
docs/: orb-ui.md
firmware/: activate-idf.sh
firmware/pocket/: partitions.csv  sdkconfig.defaults
firmware/pocket/main/: CMakeLists.txt  bridge_ws.c  bridge_ws.h  example_config.h  i2s_es8311_example.c  idf_component.yml  secrets.h.example  ui_orb.c  ui_orb.h  wifi.c  wifi.h
tasks/: STATUS.md  backlog.md  lessons.md  todo.md
